--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.RezepteActivity" />
-        <activity android:name=".activities.MenuActivity"></activity>
+        <activity android:name=".activities.MenuActivity" />
+        <activity
+            android:name=".activities.RezepteActivity"
+            android:parentActivityName=".activities.MenuActivity" />
+        <activity
+            android:name=".activities.RezepteListActivity"
+            android:parentActivityName=".activities.MenuActivity" />
+        <activity
+            android:name=".activities.RezepteSucheActivity"
+            android:parentActivityName=".activities.MenuActivity" />
+        <activity
+            android:name=".activities.AddRezeptActivity"
+            android:parentActivityName=".activities.MenuActivity"></activity>
     </application>
 
 </manifest>
