--- a/build.gradle
+++ b/build.gradle
@@ -19,9 +19,15 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url 'https://maven.google.com' }
     }
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+ext {
+    buildToolsVersion = "25.0.2"
+    supportLibVersion = "25.3.1"
+    archRoomVersion = "1.0.0-alpha1"
 }
