--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,15 +23,16 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.google.android.gms:play-services-vision:11.6.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:design:26.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compileOnly "org.projectlombok:lombok:1.16.20"
     annotationProcessor 'org.projectlombok:lombok:1.16.20'
     compile 'android.arch.persistence.room:runtime:1.0.0'
-    annotationProcessor  'android.arch.persistence.room:compiler:1.0.0'
-
+    annotationProcessor 'android.arch.persistence.room:compiler:1.0.0'
 
 
 }
